# IoT2025_proyecto_final

./: README.md
audio_player/: .gitignore  CMakeLists.txt  README.md  partitions.csv
audio_player/components/Task_queue/Include/: CMakeLists.txt  Task_queeu.h  Task_queue.h
audio_player/components/Task_queue/main/: CMakeLists.txt  Main.c
audio_player/components/Task_queue/src/: CMakeLists.txt  Task_queue.c
audio_player/components/audio_embebido/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml
audio_player/components/audio_embebido/include/: audio_embebido copy.md  audio_embebido.h
audio_player/components/audio_embebido/src/: audio_embebido copy.md  audio_embebido.c
audio_player/components/config_embebido/: CMakeLists.txt
audio_player/components/config_embebido/include/: config_embebido.h
audio_player/components/config_embebido/src/: config_embebido.c
audio_player/components/esp_rom_delay_ms/: CMakeLists.txt
audio_player/components/esp_rom_delay_ms/include/: esp_rom_delay_ms.h
audio_player/components/esp_rom_delay_ms/src/: esp_rom_delay_ms.c
audio_player/components/event_logger/: CMakeLists.txt
audio_player/components/event_logger/include/: event_logger.h
audio_player/components/event_logger/src/: event_logger.c
audio_player/components/led_embebido/src/: led_embebido.c
audio_player/components/led_strip/src/: led_strip_rmt_ws2812.c
audio_player/components/mqtt_embebido/: CMakeLists.txt
audio_player/components/mqtt_embebido/include/: mqtt_embebido copy.h  mqtt_embebido.h
audio_player/components/mqtt_embebido/src/: mqtt_embebido.c
audio_player/components/ntp_sync/: CMakeLists.txt
audio_player/components/ntp_sync/include/: sntp.h
audio_player/components/ntp_sync/src/: sntp.c
audio_player/components/queue_embebido/: CMakeLists.txt
audio_player/components/queue_embebido/include/: queue_embebido.h
audio_player/components/queue_embebido/src/: queue_embebido.c
audio_player/components/servidor_embebido/: CMakeLists.txt
audio_player/components/servidor_embebido/html/: index.html
audio_player/components/servidor_embebido/include/: servidor_embebido.h
audio_player/components/servidor_embebido/src/: servidor_embebido.c
audio_player/components/spiffs_embebido/: CMakeLists.txt
audio_player/components/spiffs_embebido/include/: spiffs_embebido.h
audio_player/components/spiffs_embebido/src/: spiffs_embebido.c
audio_player/components/task_A/src/: taskA.c
audio_player/components/task_B/src/: taskB.c
audio_player/components/task_C/src/: taskC.c
audio_player/components/tiempo_embebido/: CMakeLists.txt
audio_player/components/tiempo_embebido/include/: tiempo_embebido.h
audio_player/components/tiempo_embebido/src/: tiempo_embebido.c
audio_player/components/touch_embebido/: CMakeLists.txt
audio_player/components/touch_embebido/include/: touch_embebido.h
audio_player/components/touch_embebido/src/: touch_embebido.c
audio_player/components/wifi_embebido/: CMakeLists.txt
audio_player/components/wifi_embebido/include/: wifi_embebido.h
audio_player/components/wifi_embebido/src/: wifi_embebido.c
audio_player/lib_bkp/: index.html
audio_player/main/: CMakeLists.txt  canon2.pcm  dog.pcm  main.c  police.pcm
audio_player/spiffs/: index.html
(+3 files in other folders)
